tests/errors/knot-return.ink
// RUN: %ink-compiler --stdin --compile-only --dump-ast < %s | FileCheck %s

== knot
~ return 1
